# ENGFORTHAI

./: Readme.md  app.py  debug  docker-compose.yml  function.py  function_page.py  idea,txt  problem&futureWork.txt  prototype  requirements.txt
Database/: project_2_asr.sql  project_2_lesson3.sql  project_2_lesson_list.sql  project_2_pretest.sql  project_2_score.sql  project_2_user.sql  project_2_word_list.sql
ENGFORTHAI_Database/: project_2_lesson1.sql  project_2_lesson10.sql  project_2_lesson2.sql  project_2_lesson20.sql  project_2_lesson3.sql  project_2_lesson30.sql  project_2_lesson4.sql  project_2_lesson40.sql  project_2_lesson5.sql  project_2_lesson50.sql  project_2_lesson_list.sql  project_2_lesson_list0.sql  project_2_pretest.sql  project_2_pretest0.sql  project_2_user.sql  project_2_user0.sql  project_2_word_list.sql
app/: __init__.py  models.py  user.py
asr-data/: cb1_clean1_test.csv  cb1_clean1_train.csv  cb1_test.csv  cb1_train.csv  cb2_clean1_train.csv  cb3_clean1_test.csv  cb5_clean1_train.csv  cb_clean1.txt
database/: project_2_beginner.sql  project_2_expert.sql  project_2_intermediate.sql  project_2_pretest.sql  project_2_user.sql
elearning-1.0.0/: layout.html
flask-asr/: app.py  app1.py  asr-test.py  asr-train.py  pyproject.toml  tempCodeRunnerFile.py
flask-asr-old/: app.py  asr-train.py  asr.py  pyproject.toml
flask-asr/templates/: index.html.jinja2
inside/: Forms.py  __init__.py  function.py  models.py  routes.py  user.py  view.py
kongpop-asr-data/: cb1.csv  cb1_clean1_test.csv  cb1_clean1_train.csv  cb2_clean1_test.csv  (+4 more)
web/: app.py  (+3 more)
(+2060 files in other folders)
